ssh tunnel conn fixed

--- a/.chalice/config.json
+++ b/.chalice/config.json
@@ -3,7 +3,17 @@
   "app_name": "portofolio-api",
   "stages": {
     "dev": {
-      "api_gateway_stage": "api"
+      "api_gateway_stage": "api",
+      "lambda_functions": {
+        "foo": {
+          "lambda_timeout": 10,
+          "environment_variables": {
+            "TABLE_NAME": "dev-table",
+            "OTHER_CONFIG": "dev-value"
+          }
+        }
+      }
+
     }
   }
 }
